<resources>
    <string name="app_name">Skalculator</string>
    <string name="scientific_calculator">Scientific calculator</string>
    <string name="simple_calculator">Simple calculator</string>

    <string name="factorial">x!</string>
    <string name="squareRoot">√</string>
    <string name="percent">%</string>
    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="tangens">tan</string>
    <string name="logarithmNatural">ln</string>
    <string name="logarithm">lg</string>
    <string name="inverse">1/x</string>
    <string name="integer">int</string>
    <string name="square">x2</string>
    <string name="cube">x3</string>
    <string name="modulo">mod</string>
    <string name="PI">π</string>
    <string name="exponent">e</string>

    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="subtraction">–</string>
    <string name="addition">+</string>
    <string name="equal">=</string>

    <string name="reset">C</string>
    <string name="clearCurrent">CE</string>
    <string name="changeSign">+/-</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnDot">.</string>

    <string name="textPrimary">= 139</string>
    <string name="textSecondary">42 + 97</string>

    <string name="impossible">impossible</string>
</resources>