<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayoutTextViews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.4"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cLayoutSimple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSecondary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="end|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#9F9F9F"
            android:textSize="34sp"



            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewPrimary"

            />

        <TextView
            android:id="@+id/textViewPrimary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="end"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="40sp"
            android:textColor="@color/white"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSecondary"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cLayoutSimple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight=".7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cLayoutTextViews"

        >

        <TextView
            android:id="@+id/btnReset"
            style="@style/SpecialButtonStyle"

            android:text="@string/reset"
            app:layout_constraintBottom_toTopOf="@id/btn7"
            app:layout_constraintEnd_toStartOf="@id/btnClearCurrent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnClearCurrent"
            style="@style/SpecialButtonStyle"
            android:text="@string/clearCurrent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnBack"
            app:layout_constraintStart_toEndOf="@id/btnReset"
            app:layout_constraintBottom_toTopOf="@id/btn8"
            />

        <TextView
            android:id="@+id/btnBack"
            style="@style/SpecialButtonStyle"
            android:foreground="@mipmap/ic_back"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@id/btn9"
            app:layout_constraintEnd_toStartOf="@id/btnDivision"
            app:layout_constraintStart_toEndOf="@id/btnClearCurrent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnDivision"
            style="@style/BinaryOperationButtonStyle"
            android:text="@string/division"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintBottom_toTopOf="@id/btnMultiplication"
            />

        <TextView
            android:id="@+id/btn7"
            style="@style/NumberButtonStyle"
            android:text="@string/btn7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnReset"
            app:layout_constraintEnd_toStartOf="@id/btn8"
            app:layout_constraintBottom_toTopOf="@id/btn4"
            />

        <TextView
            android:id="@+id/btn8"
            style="@style/NumberButtonStyle"
            android:text="@string/btn8"
            app:layout_constraintStart_toEndOf="@id/btn7"
            app:layout_constraintTop_toBottomOf="@id/btnClearCurrent"
            app:layout_constraintEnd_toStartOf="@id/btn9"
            app:layout_constraintBottom_toTopOf="@id/btn5"
            />

        <TextView
            android:id="@+id/btn9"
            style="@style/NumberButtonStyle"
            android:text="@string/btn9"
            app:layout_constraintStart_toEndOf="@id/btn8"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintEnd_toStartOf="@id/btnMultiplication"
            app:layout_constraintBottom_toTopOf="@id/btn6"
            />

        <TextView
            android:id="@+id/btnMultiplication"
            style="@style/BinaryOperationButtonStyle"
            android:text="@string/multiplication"
            app:layout_constraintStart_toEndOf="@id/btn9"
            app:layout_constraintTop_toBottomOf="@id/btnDivision"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSubtraction"
            />

        <TextView
            android:id="@+id/btn4"
            style="@style/NumberButtonStyle"
            android:text="@string/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn7"
            app:layout_constraintEnd_toStartOf="@id/btn5"
            app:layout_constraintBottom_toTopOf="@id/btn1"
            />

        <TextView
            android:id="@+id/btn5"
            style="@style/NumberButtonStyle"
            android:text="@string/btn5"
            app:layout_constraintStart_toEndOf="@id/btn4"
            app:layout_constraintTop_toBottomOf="@id/btn8"
            app:layout_constraintEnd_toStartOf="@id/btn6"
            app:layout_constraintBottom_toTopOf="@id/btn2"
            />

        <TextView
            android:id="@+id/btn6"
            style="@style/NumberButtonStyle"
            android:text="@string/btn6"
            app:layout_constraintStart_toEndOf="@id/btn5"
            app:layout_constraintTop_toBottomOf="@id/btn9"
            app:layout_constraintEnd_toStartOf="@id/btnSubtraction"
            app:layout_constraintBottom_toTopOf="@id/btn3"
            />

        <TextView
            android:id="@+id/btnSubtraction"
            style="@style/BinaryOperationButtonStyle"
            android:text="@string/subtraction"
            app:layout_constraintStart_toEndOf="@id/btn6"
            app:layout_constraintTop_toBottomOf="@id/btnMultiplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnAddition"
            />

        <TextView
            android:id="@+id/btn1"
            style="@style/NumberButtonStyle"
            android:text="@string/btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn4"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintBottom_toTopOf="@id/btn0"
            />

        <TextView
            android:id="@+id/btn2"
            style="@style/NumberButtonStyle"
            android:text="@string/btn2"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintTop_toBottomOf="@id/btn5"
            app:layout_constraintEnd_toStartOf="@id/btn3"
            app:layout_constraintBottom_toTopOf="@id/btnDot"
            />

        <TextView
            android:id="@+id/btn3"
            style="@style/NumberButtonStyle"
            android:text="@string/btn3"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintTop_toBottomOf="@id/btn6"
            app:layout_constraintEnd_toStartOf="@id/btnAddition"
            app:layout_constraintBottom_toTopOf="@id/btnChangeSign"/>

        <TextView
            android:id="@+id/btnAddition"
            style="@style/BinaryOperationButtonStyle"
            android:text="@string/addition"
            app:layout_constraintStart_toEndOf="@id/btn3"
            app:layout_constraintTop_toBottomOf="@id/btnSubtraction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnEqual"/>

        <TextView
            android:id="@+id/btn0"
            style="@style/NumberButtonStyle"
            android:text="@string/btn0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            app:layout_constraintEnd_toStartOf="@id/btnDot"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btnDot"
            style="@style/NumberButtonStyle"
            android:text="@string/btnDot"
            app:layout_constraintStart_toEndOf="@id/btn0"
            app:layout_constraintTop_toBottomOf="@id/btn2"
            app:layout_constraintEnd_toStartOf="@id/btnChangeSign"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btnChangeSign"
            style="@style/NumberButtonStyle"

            android:text="@string/changeSign"

            app:layout_constraintStart_toEndOf="@id/btnDot"
            app:layout_constraintTop_toBottomOf="@id/btn3"
            app:layout_constraintEnd_toStartOf="@id/btnEqual"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/btnEqual"
            style="@style/EqualButtonStyle"

            android:text="@string/equal"
            app:layout_constraintStart_toEndOf="@id/btnChangeSign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAddition"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>